--- a/build.gradle
+++ b/build.gradle
@@ -7,9 +7,21 @@ buildscript {
     }
 }
 apply plugin: 'android'
+repositories {
+    mavenCentral()
+}
 
 dependencies {
     compile files('libs/achartengine-1.1.0.jar')
+    compile 'com.google.apis:google-api-services-drive:v2-rev155-1.19.1'
+    compile ('com.google.api-client:google-api-client-android:1.17.0-rc') {
+        exclude module: 'httpclient'
+    }
+
+    compile ('com.google.http-client:google-http-client-gson:1.17.0-rc') {
+        exclude module: 'httpclient'
+    }
+
     compile fileTree(dir: 'libs', include: '*.jar')
 }
 
