--- a/build.gradle
+++ b/build.gradle
@@ -12,17 +12,17 @@ repositories {
 }
 
 dependencies {
-    compile files('libs/achartengine-1.1.0.jar')
-    compile 'com.google.apis:google-api-services-drive:v2-rev155-1.19.1'
-    compile ('com.google.api-client:google-api-client-android:1.17.0-rc') {
-        exclude module: 'httpclient'
-    }
-
-    compile ('com.google.http-client:google-http-client-gson:1.17.0-rc') {
-        exclude module: 'httpclient'
-    }
-
     compile fileTree(dir: 'libs', include: '*.jar')
+    compile 'com.google.apis:google-api-services-drive:v2-rev155-1.19.1'
+    compile('com.google.api-client:google-api-client-android:1.17.0-rc') {
+        exclude module: 'httpclient'
+    }
+    compile('com.google.http-client:google-http-client-gson:1.17.0-rc') {
+        exclude module: 'httpclient'
+    }
+    compile('com.google.android.gms:play-services:6.5.+') {
+        exclude module: 'support-v4'
+    }
 }
 
 android {
