--- a/build.gradle
+++ b/build.gradle
@@ -3,28 +3,13 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.0.0'
+        classpath 'com.android.tools.build:gradle:2.2.2'
     }
 }
-apply plugin: 'android'
+apply plugin: 'com.android.application'
 repositories {
     mavenCentral()
 }
-
-dependencies {
-    compile fileTree(dir: 'libs', include: '*.jar')
-    compile 'com.google.apis:google-api-services-drive:v2-rev155-1.19.1'
-    compile('com.google.api-client:google-api-client-android:1.17.0-rc') {
-        exclude module: 'httpclient'
-    }
-    compile('com.google.http-client:google-http-client-gson:1.17.0-rc') {
-        exclude module: 'httpclient'
-    }
-    compile('com.google.android.gms:play-services:6.5.+') {
-        exclude module: 'support-v4'
-    }
-}
-
 android {
     signingConfigs {
         release {
@@ -61,10 +46,23 @@ android {
     }
     buildTypes {
         debug {
-            signingConfig signingConfigs.release
         }
         release {
             signingConfig signingConfigs.release
         }
+    }
+}
+
+dependencies {
+    compile fileTree(include: '*.jar', dir: 'libs')
+    compile 'com.google.apis:google-api-services-drive:v2-rev155-1.19.1'
+    compile('com.google.api-client:google-api-client-android:1.17.0-rc') {
+        exclude module: 'httpclient'
+    }
+    compile('com.google.http-client:google-http-client-gson:1.17.0-rc') {
+        exclude module: 'httpclient'
+    }
+    compile('com.google.android.gms:play-services:6.5.+') {
+        exclude module: 'support-v4'
     }
 }
